bug fix for .net native
Former-commit-id: 5ab8848030156a7cf5732be7f112cc26adea6377 [formerly 5871af7a13341f84c4c316943332f86a1ed964a5]
Former-commit-id: 5c6337003800a69e864a66f851e3eb7373bfa2d3

--- a/ExViewer/Views/ImagePage.xaml
+++ b/ExViewer/Views/ImagePage.xaml
@@ -100,6 +100,9 @@
                                       Grid.RowSpan="2"
                                       SizeChanged="sv_SizeChanged"
                                       ManipulationDelta="sv_ManipulationDelta"
+                                      PointerEntered="sv_PointerEntered"
+                                      PointerMoved="sv_PointerMoved"
+                                      PointerPressed="sv_PointerPressed"
                                       ManipulationMode="All">
                             <Image Source="{x:Bind Image, Mode=OneWay}"
                                    SizeChanged="Image_SizeChanged" />
