bug fix for .net native
Former-commit-id: 554b3b84dc399ff6165d0f0c2b3a96feae7839a8 [formerly a2999a3b3bb52e17be63dae5a797f0df9eb54c45]
Former-commit-id: d46613ec93ae476565daee0e9c321da0036b32da

--- a/ExViewer/Views/GalleryPage.xaml
+++ b/ExViewer/Views/GalleryPage.xaml
@@ -68,7 +68,7 @@
                   IsItemClickEnabled="True"
                   ItemClick="gv_ItemClick"
                   ItemsSource="{x:Bind VM.Gallery, Mode=OneWay}"
-                  SelectedItem="{x:Bind VM.Current, Mode=TwoWay, Converter={StaticResource EmptyConverter}}"
+                  SelectedIndex="{x:Bind VM.CurrentIndex, Mode=TwoWay}"
                   RelativePanel.Below="gd_info"
                   RelativePanel.AlignLeftWithPanel="True"
                   RelativePanel.AlignRightWithPanel="True"
